@@ -5,6 +5,8 @@ import it.example.speedclick.dto.MyMessage;
 import it.example.speedclick.dto.Point;
 import it.example.speedclick.repository.ClickRepository;
 import it.example.speedclick.utility.MathUtils;
+
+import com.fasterxml.jackson.databind.ObjectMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 import org.springframework.web.socket.CloseStatus;
@@ -15,7 +17,6 @@ import org.springframework.web.socket.handler.TextWebSocketHandler;
 import java.math.BigDecimal;
 import java.text.MessageFormat;
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Component
 public class MyWebSocketHandler extends TextWebSocketHandler {
@@ -51,22 +52,25 @@ public class MyWebSocketHandler extends TextWebSocketHandler {
         for (WebSocketSession session : sessions) {
             try {
                 if (session.isOpen()) {
-                    session.sendMessage(toMessage());
+                    ObjectMapper mapper = new ObjectMapper();
+                    TextMessage message = new TextMessage(mapper.writeValueAsString(toMessage()));
+                    session.sendMessage(message);
                 }
             } catch (Exception e) {
                 e.printStackTrace();
             }
-            break;
         }
     }
+
+
 
     private MyMessage toMessage() {
 
         List<Point> points = generateHistogramPoints();
 
         Data data = new Data();
-        data.setX(points.stream().map(item -> item.getX()).collect(Collectors.toList()));
-        data.setY(points.stream().map(item -> item.getY()).collect(Collectors.toList()));
+        data.setX(points.stream().map(Point::getX).toList());
+        data.setY(points.stream().map(Point::getY).toList());
         data.setInfo(generateInfoMap());
 
         return new MyMessage(data);
@@ -75,7 +79,7 @@ public class MyWebSocketHandler extends TextWebSocketHandler {
     private List<Point> generateHistogramPoints() {
         List<BigDecimal> values = repository.getAllTimes();
         System.out.println(MessageFormat.format("Broadcast message: {0} values registered", values.size()));
-        List<Point> points = MathUtils.computeHistogram(values, BigDecimal.ZERO, new BigDecimal(1000), 30);
+        List<Point> points = MathUtils.computeHistogram(values, BigDecimal.ZERO, new BigDecimal(500), 20);
         return points;
     }
 
@@ -86,12 +90,11 @@ public class MyWebSocketHandler extends TextWebSocketHandler {
     }
 
     private String getTopUserInfo() {
-        String topUser = repository.getMaxMap()
+        return repository.getMaxMap()
                 .entrySet()
                 .stream()
                 .sorted(Comparator.comparing(item -> item.getValue()))
                 .findFirst()
                 .map(item -> item.getKey() + " - " + item.getValue()).orElse("...");
-        return topUser;
     }
 }
